[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Miles Bardon <milesbardon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["prepush-hook", "run-cargo-test", "run-cargo-clippy"]
